--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -550,5 +550,7 @@
   "account_verified": "Βρέθηκε λογαριασμός στο δίκτυο",
   "error_storage_quota_exceeded": "Υπέρβαση του ορίου αποθήκευσης από την πλευρά του πελάτη. Δοκιμάστε να καταργήσετε έναν ή περισσότερους λογαριασμούς για να ελευθερώσετε χώρο.",
   "you_own_no_token": "Δεν έχετε ακόμη κουπόνια",
-  "chart_balance_change": "Αλλαγή υπολοίπου κατά την εμφανιζόμενη περίοδο"
+  "chart_balance_change": "Αλλαγή υπολοίπου κατά την εμφανιζόμενη περίοδο",
+  "waiting_for_payment": "Αναμονή για πληρωμή",
+  "paid": "Καταχωρήθηκε η πληρωμή"
 }
