--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -550,5 +550,7 @@
   "account_verified": "नेटवर्क पर खाता मिला",
   "error_storage_quota_exceeded": "क्लाइंट साइड स्टोरेज कोटा पार हो गया था। कुछ स्थान खाली करने के लिए एक या अधिक खाते निकालने का प्रयास करें.",
   "you_own_no_token": "आपके पास अभी तक कोई टोकन नहीं है",
-  "chart_balance_change": "प्रदर्शित अवधि में शेष परिवर्तन"
+  "chart_balance_change": "प्रदर्शित अवधि में शेष परिवर्तन",
+  "waiting_for_payment": "भुगतान की प्रतीक्षा करना",
+  "paid": "भुगतान पंजीकृत"
 }
