--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -550,5 +550,7 @@
   "account_verified": "Account gevonden op netwerk",
   "error_storage_quota_exceeded": "Opslagquotum aan clientzijde is overschreden. Probeer een of meer accounts te verwijderen om ruimte vrij te maken.",
   "you_own_no_token": "Je hebt nog geen tokens",
-  "chart_balance_change": "Saldoverandering over weergegeven periode"
+  "chart_balance_change": "Saldoverandering over weergegeven periode",
+  "waiting_for_payment": "Wachten op betaling",
+  "paid": "Betaling geregistreerd"
 }
