--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -550,5 +550,7 @@
   "account_verified": "Аккаунт найден в сети",
   "error_storage_quota_exceeded": "Превышена квота хранилища на стороне клиента. Попробуйте удалить одну или несколько учетных записей, чтобы освободить место.",
   "you_own_no_token": "У вас еще нет токенов",
-  "chart_balance_change": "Изменение баланса за отображаемый период"
+  "chart_balance_change": "Изменение баланса за отображаемый период",
+  "waiting_for_payment": "Ожидается платеж",
+  "paid": "Платеж зарегистрирован"
 }
