--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -550,5 +550,7 @@
   "account_verified": "Налог је пронађен на мрежи",
   "error_storage_quota_exceeded": "Премашена је квота складишта на страни клијента. Покушајте да уклоните један или више налога да бисте ослободили простор.",
   "you_own_no_token": "Још увек немате ниједан жетон",
-  "chart_balance_change": "Промена стања током приказаног периода"
+  "chart_balance_change": "Промена стања током приказаног периода",
+  "waiting_for_payment": "Чекање исплате новца",
+  "paid": "Уплата регистрована"
 }
