--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -550,5 +550,7 @@
   "account_verified": "Акаунт знайдено в мережі",
   "error_storage_quota_exceeded": "Перевищено квоту пам’яті на стороні клієнта. Спробуйте видалити один або кілька облікових записів, щоб звільнити місце.",
   "you_own_no_token": "У вас ще немає жетонів",
-  "chart_balance_change": "Зміна балансу за відображений період"
+  "chart_balance_change": "Зміна балансу за відображений період",
+  "waiting_for_payment": "Очікування оплати",
+  "paid": "Платіж зареєстрований"
 }
