--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -550,5 +550,7 @@
   "account_verified": "Акаунтът е намерен в мрежата",
   "error_storage_quota_exceeded": "Квотата за съхранение от страна на клиента беше надвишена. Опитайте да премахнете един или повече акаунти, за да освободите малко място.",
   "you_own_no_token": "Все още нямате токени",
-  "chart_balance_change": "Промяна на баланса през показания период"
+  "chart_balance_change": "Промяна на баланса през показания период",
+  "waiting_for_payment": "Изчакване на плащане",
+  "paid": "Плащането е регистрирано"
 }
