--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -550,5 +550,7 @@
   "account_verified": "Akun ditemukan di jaringan",
   "error_storage_quota_exceeded": "Kuota penyimpanan sisi klien terlampaui. Coba hapus satu atau beberapa akun untuk mengosongkan sebagian ruang.",
   "you_own_no_token": "Anda belum memiliki token apa pun",
-  "chart_balance_change": "Perubahan saldo selama periode yang ditampilkan"
+  "chart_balance_change": "Perubahan saldo selama periode yang ditampilkan",
+  "waiting_for_payment": "Menunggu pembayaran",
+  "paid": "Pembayaran terdaftar"
 }
