wip: added contacts - just missing contacts drop down menu (WIP) for recipient input

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -552,5 +552,15 @@
   "you_own_no_token": "Все още нямате токени",
   "chart_balance_change": "Промяна на баланса през показания период",
   "waiting_for_payment": "Изчакване на плащане",
-  "paid": "Плащането е регистрирано"
+  "paid": "Плащането е регистрирано",
+  "contact_successfully_deleted": "Контактът или контактите са изтрити успешно",
+  "edit_name": "Редактиране на име",
+  "no_contacts_yet": "Все още няма контакти",
+  "confirm_delete_contacts_hint": "Изтрива избраните акаунти от този портфейл",
+  "confirm_delete_contacts_q": "Искате ли да премахнете избраните контакти?",
+  "add_contact": "Добави контакт",
+  "contact_added": "Контактът е добавен успешно",
+  "add_as_contact": "Добавяне като контакт",
+  "edit_contact": "Редактиране на контакт",
+  "error_add_contact": "Контактът не е добавен. Най-вероятно вече сте добавили този акаунт."
 }
