--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -552,5 +552,15 @@
   "you_own_no_token": "आपके पास अभी तक कोई टोकन नहीं है",
   "chart_balance_change": "प्रदर्शित अवधि में शेष परिवर्तन",
   "waiting_for_payment": "भुगतान की प्रतीक्षा करना",
-  "paid": "भुगतान पंजीकृत"
+  "paid": "भुगतान पंजीकृत",
+  "contact_successfully_deleted": "संपर्क या संपर्क सफलतापूर्वक हटा दिए गए",
+  "edit_name": "नाम संपादित करें",
+  "no_contacts_yet": "अभी तक कोई संपर्क नहीं है",
+  "confirm_delete_contacts_hint": "इस वॉलेट से चयनित खातों को हटाता है",
+  "confirm_delete_contacts_q": "क्या आप चयनित संपर्कों को हटाना चाहते हैं?",
+  "add_contact": "संपर्क जोड़ें",
+  "contact_added": "संपर्क सफलतापूर्वक जोड़ा गया",
+  "add_as_contact": "संपर्क के रूप में जोड़ें",
+  "edit_contact": "संपादित संपर्क",
+  "error_add_contact": "संपर्क नहीं जोड़ा गया। संभवत: आपने वह खाता पहले ही जोड़ लिया है।"
 }
