--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -552,5 +552,15 @@
   "you_own_no_token": "У вас еще нет токенов",
   "chart_balance_change": "Изменение баланса за отображаемый период",
   "waiting_for_payment": "Ожидается платеж",
-  "paid": "Платеж зарегистрирован"
+  "paid": "Платеж зарегистрирован",
+  "contact_successfully_deleted": "Контакт или контакты успешно удалены",
+  "edit_name": "Редактировать имя",
+  "no_contacts_yet": "Контактов пока нет",
+  "confirm_delete_contacts_hint": "Удаляет выбранные аккаунты из этого кошелька",
+  "confirm_delete_contacts_q": "Вы хотите удалить выбранные контакты?",
+  "add_contact": "Добавить контакт",
+  "contact_added": "Контакт успешно добавлен",
+  "add_as_contact": "Добавить как контакт",
+  "edit_contact": "Изменить контакт",
+  "error_add_contact": "Контакт не добавлен. Скорее всего, вы уже добавили эту учетную запись."
 }
