--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -552,5 +552,15 @@
   "you_own_no_token": "Још увек немате ниједан жетон",
   "chart_balance_change": "Промена стања током приказаног периода",
   "waiting_for_payment": "Чекање исплате новца",
-  "paid": "Уплата регистрована"
+  "paid": "Уплата регистрована",
+  "contact_successfully_deleted": "Контакти или контакти су успешно избрисани",
+  "edit_name": "Уреди име",
+  "no_contacts_yet": "Још нема контаката",
+  "confirm_delete_contacts_hint": "Брише изабране налоге из овог новчаника",
+  "confirm_delete_contacts_q": "Да ли желите да уклоните изабране контакте?",
+  "add_contact": "Додај контакт",
+  "contact_added": "Контакт је успешно додат",
+  "add_as_contact": "Додај као контакт",
+  "edit_contact": "Уреди контакт",
+  "error_add_contact": "Контакт није додат. Највероватније сте већ додали тај налог."
 }
