--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -552,5 +552,15 @@
   "you_own_no_token": "У вас ще немає жетонів",
   "chart_balance_change": "Зміна балансу за відображений період",
   "waiting_for_payment": "Очікування оплати",
-  "paid": "Платіж зареєстрований"
+  "paid": "Платіж зареєстрований",
+  "contact_successfully_deleted": "Контакт або контакти успішно видалено",
+  "edit_name": "Редагувати назву",
+  "no_contacts_yet": "Контактів ще немає",
+  "confirm_delete_contacts_hint": "Видаляє вибрані облікові записи з цього гаманця",
+  "confirm_delete_contacts_q": "Бажаєте видалити вибрані контакти?",
+  "add_contact": "Додати контакт",
+  "contact_added": "Контакт успішно додано",
+  "add_as_contact": "Додати як контакт",
+  "edit_contact": "Редагувати контакт",
+  "error_add_contact": "Контакт не додано. Швидше за все, ви вже додали цей обліковий запис."
 }
