feat: contacts selector on recipient input works now

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -562,5 +562,6 @@
   "contact_added": "Контактът е добавен успешно",
   "add_as_contact": "Добавяне като контакт",
   "edit_contact": "Редактиране на контакт",
-  "error_add_contact": "Контактът не е добавен. Най-вероятно вече сте добавили този акаунт."
+  "error_add_contact": "Контактът не е добавен. Най-вероятно вече сте добавили този акаунт.",
+  "no_contact_found": "Няма намерен контакт"
 }
