--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -562,5 +562,6 @@
   "contact_added": "Η επαφή προστέθηκε με επιτυχία",
   "add_as_contact": "Προσθήκη ως επαφή",
   "edit_contact": "Επεξεργασία επαφής",
-  "error_add_contact": "Η επαφή δεν προστέθηκε. Πιθανότατα έχετε ήδη προσθέσει αυτόν τον λογαριασμό."
+  "error_add_contact": "Η επαφή δεν προστέθηκε. Πιθανότατα έχετε ήδη προσθέσει αυτόν τον λογαριασμό.",
+  "no_contact_found": "Δεν βρέθηκε επαφή"
 }
