--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -562,5 +562,6 @@
   "contact_added": "संपर्क सफलतापूर्वक जोड़ा गया",
   "add_as_contact": "संपर्क के रूप में जोड़ें",
   "edit_contact": "संपादित संपर्क",
-  "error_add_contact": "संपर्क नहीं जोड़ा गया। संभवत: आपने वह खाता पहले ही जोड़ लिया है।"
+  "error_add_contact": "संपर्क नहीं जोड़ा गया। संभवत: आपने वह खाता पहले ही जोड़ लिया है।",
+  "no_contact_found": "कोई संपर्क नहीं मिला"
 }
