--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -562,5 +562,6 @@
   "contact_added": "連絡先が正常に追加されました",
   "add_as_contact": "連絡先として追加",
   "edit_contact": "連絡先を編集",
-  "error_add_contact": "連絡先が追加されていません。ほとんどの場合、そのアカウントは既に追加されています。"
+  "error_add_contact": "連絡先が追加されていません。ほとんどの場合、そのアカウントは既に追加されています。",
+  "no_contact_found": "連絡先が見つかりません"
 }
