--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -562,5 +562,6 @@
   "contact_added": "Контакт успешно добавлен",
   "add_as_contact": "Добавить как контакт",
   "edit_contact": "Изменить контакт",
-  "error_add_contact": "Контакт не добавлен. Скорее всего, вы уже добавили эту учетную запись."
+  "error_add_contact": "Контакт не добавлен. Скорее всего, вы уже добавили эту учетную запись.",
+  "no_contact_found": "Контакт не найден"
 }
