--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -562,5 +562,6 @@
   "contact_added": "Контакт је успешно додат",
   "add_as_contact": "Додај као контакт",
   "edit_contact": "Уреди контакт",
-  "error_add_contact": "Контакт није додат. Највероватније сте већ додали тај налог."
+  "error_add_contact": "Контакт није додат. Највероватније сте већ додали тај налог.",
+  "no_contact_found": "Није пронађен ниједан контакт"
 }
