--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -562,5 +562,6 @@
   "contact_added": "Контакт успішно додано",
   "add_as_contact": "Додати як контакт",
   "edit_contact": "Редагувати контакт",
-  "error_add_contact": "Контакт не додано. Швидше за все, ви вже додали цей обліковий запис."
+  "error_add_contact": "Контакт не додано. Швидше за все, ви вже додали цей обліковий запис.",
+  "no_contact_found": "Контакт не знайдено"
 }
